// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Genre Should active Genre render correctly 1`] = `
<li
  className="catalog__genres-item catalog__genres-item--active"
>
  <a
    className="catalog__genres-link"
    href="#"
    id=""
    onClick={[Function]}
  >
    
  </a>
</li>
`;

exports[`Render Genre Should unactive Genre render correctly 1`] = `
<li
  className="catalog__genres-item "
>
  <a
    className="catalog__genres-link"
    href="#"
    id=""
    onClick={[Function]}
  >
    
  </a>
</li>
`;
